@@ -29,16 +29,19 @@ public class TexturePackDisplay extends Display {
 	private int selected;
 	private boolean shouldUpdate;
 
-	// The texture packs are put in a folder generated by the game called "Textures packs"
-	// Many texture packs can be put according to the number of files
+	/* The texture packs are put in a folder generated by the game called "Textures packs".
+	 * Many texture packs can be put according to the number of files.
+	 */
 	
 	public TexturePackDisplay() {
 		this.textureList = new ArrayList<>();
 		this.textureList.add(TexturePackDisplay.DEFAULT_TEXTURE_PACK);
 
+		// Generate texture packs folder
 		this.location = new File(FileHandler.getSystemGameDir() + "/" + FileHandler.getLocalGameDir() + "/TexturePacks");
 		this.location.mkdirs();
 
+		// Read and add the .zip file to the texture pack list
 		for (String fileName : Objects.requireNonNull(location.list())) {
 			if (fileName.endsWith(".zip")) { // only .zip files ok?
 				textureList.add(fileName);
@@ -87,8 +90,9 @@ public class TexturePackDisplay extends Display {
 		}
 	}
 
+	// In case the name is too big ...
 	private static String shortNameIfLong(String name) {
-		return name.length() > 20 ? name.substring(0, 16) + "..." : name;
+		return name.length() > 22 ? name.substring(0, 16) + "..." : name;
 	}
 
 	@Override
@@ -108,11 +112,12 @@ public class TexturePackDisplay extends Display {
 		String selectedUp = selected + 1 > textureList.size() - 1 ? "" : textureList.get(selected + 1);
 		String selectedDown = selected - 1 < 0 ? "" : textureList.get(selected - 1);
 
-		Font.drawCentered("Texture Packs", screen, Screen.h - 180, Color.get(0, 555, 555, 555));
-		Font.drawCentered(TexturePackDisplay.shortNameIfLong(selectedDown), screen, Screen.h - 72, Color.GRAY);
-		Font.drawCentered(TexturePackDisplay.shortNameIfLong(textureList.get(selected)), screen, Screen.h - 80, Color.GREEN);
-		Font.drawCentered(TexturePackDisplay.shortNameIfLong(selectedUp), screen, Screen.h - 90, Color.GRAY);
-		Font.drawCentered("Arrows keys "+ Game.input.getMapping("MOVE-DOWN") + ", " + Game.input.getMapping("MOVE-UP"), screen, Screen.h - 11, Color.get(0, 222, 222, 222));
+		// Render the menu
+		Font.drawCentered("Texture Packs", screen, Screen.h - 180, Color.get(0, 555, 555, 555)); // Title
+		Font.drawCentered(TexturePackDisplay.shortNameIfLong(selectedDown), screen, Screen.h - 70, Color.GRAY); // Unselected space
+		Font.drawCentered(TexturePackDisplay.shortNameIfLong(textureList.get(selected)), screen, Screen.h - 80, Color.GREEN); // Selection
+		Font.drawCentered(TexturePackDisplay.shortNameIfLong(selectedUp), screen, Screen.h - 90, Color.GRAY); // Other unselected space
+		Font.drawCentered("Use "+ Game.input.getMapping("MOVE-DOWN") + ", " + Game.input.getMapping("MOVE-UP"), screen, Screen.h - 11, Color.get(0, 222, 222, 222)); // Controls
 
 		int h = 2;
 		int w = 15;
@@ -121,17 +126,20 @@ public class TexturePackDisplay extends Display {
 		
 		for (int y = 0; y < h; y++) {
 			for (int x = 0; x < w; x++) {
-				screen.render(xo + x * 8, yo + y * 8, x + y * 32, 0, 3); // texture pack logo
+				screen.render(xo + x * 8, yo + y * 8, x + y * 32, 0, 3); // Texture pack logo
 			}
 		}
 
-		/* Unnecessary for now...
-		screen.render(24, 48, 134, Color.get(-1, 110, 330, 550), 0);
-		screen.render(48, 48, 136, Color.get(-1, 110, 330, 550), 0);
-		screen.render(72, 48, 164, Color.get(-1, 100, 321, 45), 0);
-		screen.render(96, 48, 384, Color.get(0, 200, 500, 533), 0);
-		screen.render(120, 48, 135, Color.get(-1, 100, 320, 430), 0);
-		*/
+	    /* Unnecessary for now...
+	     * This part is used to test the change of textures
+	     * in some future it may be useful
+	     *
+	     *screen.render(24, 48, 134, Color.get(-1, 110, 330, 550), 0);
+	     *screen.render(48, 48, 136, Color.get(-1, 110, 330, 550), 0);
+	     *screen.render(72, 48, 164, Color.get(-1, 100, 321, 45), 0);
+	     *screen.render(96, 48, 384, Color.get(0, 200, 500, 533), 0);
+	     *screen.render(120, 48, 135, Color.get(-1, 100, 320, 430), 0);
+	     */
 	}
 
 }
